--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-drafts/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local files
+.history/
+.drafts/
