--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,32 @@
-# EditorConfig is awesome: https://EditorConfig.org
+# Note: VIM users should use alternate marks [[[ and ]]] as the original ones can confuse nested substitutions, e.g.: ${${${VAR}}}
+# # Space or Tabs? https://stackoverflow.com/questions/35649847/objective-reasons-for-using-spaces-instead-of-tabs-for-indentation
 
-# top-most EditorConfig file
 root = true
 
 [*]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+
+[**.{md,rst}]
+trim_trailing_whitespace = false
+
+[*.{yml,yaml}]
 indent_style = space
 indent_size = 2
-end_of_line = lf
-charset = utf-8
+tab_width = 2
+
+[*.{sh,bash,zsh,fish}]
+indent_style = space
+indent_size = 2
+tab_width = 2
 trim_trailing_whitespace = true
-insert_final_newline = true
+
+[*.{js,jsx,html,sass}]
+indent_style = tab
+indent_size = 4
+trim_trailing_whitespace = true
+
+[ChangeLog]
+indent_style = tab
+indent_size = 8
