--- a/.github/workflows/check-sh.yml
+++ b/.github/workflows/check-sh.yml
@@ -54,6 +54,7 @@ jobs:
           sh -x ./lib/sh/install.sh -- -a annex
           sh -x ./lib/sh/install.sh -- -a loader
           sh -x ./lib/sh/install.sh -- -a zunit
+          sh -x ./lib/sh/install.sh -- -a zpmod
       - name: 🍎 Install on MacOS
         if: startsWith(matrix.os, 'macos')
         run: |
@@ -61,6 +62,7 @@ jobs:
           sh -x ./lib/sh/install.sh -- -a annex
           sh -x ./lib/sh/install.sh -- -a loader
           sh -x ./lib/sh/install.sh -- -a zunit
+          sh -x ./lib/sh/install.sh -- -a zpmod
       - name: 🪟 Install on Windows
         if: startsWith(matrix.os, 'windows')
         shell: C:\tools\cygwin\bin\bash.exe --login --norc -eo pipefail -o igncr '{0}'
@@ -70,4 +72,5 @@ jobs:
           sh -x ./lib/sh/install.sh -- -a annex
           sh -x ./lib/sh/install.sh -- -a loader
           sh -x ./lib/sh/install.sh -- -a zunit
+          sh -x ./lib/sh/install.sh -- -a zpmod
  
