--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
 name = "zi-src"
 main = "src/index.ts"
 compatibility_date = "2022-04-27"
-routes = ["raw.zshell.dev/*", "zi.zshell.dev/*"]
+routes = ["raw.zshell.dev/*"]
