--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -20,5 +20,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: .
-          allow_empty_commit: true
-          keep_files: true
+          user_name: digital-teams[bot]
+          user_email: digital-teams@pm.me
