--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zi-src",
   "version": "0.0.0",
+  "private": true,
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,5 +19,7 @@
     "node": ">=16"
   },
   "packageManager": "yarn@3.2.0",
-  "private": true
+  "resolutions": {
+    "dicer": ">=0.3.1"
+  }
 }
