--- a/src/workers/get/package.json
+++ b/src/workers/get/package.json
@@ -7,13 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format:check": "prettier --check '**/*.{js,css,json,md}'",
     "format:write": "prettier --write '**/*.{js,css,json,md}'",
-    "format:diff": "prettier --list-different ."
+    "format:diff": "prettier --list-different .",
+    "push": "wrangler publish",
+    "dev": "wrangler dev"
   },
   "author": "Salvydas Lukosius <sall@w-ss.io>",
   "license": "MIT",
   "devDependencies": {
     "@cloudflare/workers-types": "^3.7.1",
-    "wrangler": "0.0.27"
+    "prettier": "2.6.2",
+    "wrangler": "2.0.7"
   },
   "engines": {
     "node": ">=16"
