--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,6 +1,11 @@
 version: 0.1
 cli:
   version: 0.12.1-beta
+repo:
+  repo:
+    host: github.com
+    owner: z-shell
+    name: zi-src
 lint:
   linters:
     - name: zsh-n
@@ -18,7 +23,7 @@ lint:
   enabled:
     - zsh-n@system
     - actionlint@1.6.13
-    - gitleaks@8.8.5
+    - gitleaks@8.8.7
     - markdownlint@0.31.1
     - prettier@2.6.2
     - shellcheck@0.8.0
