workers CI 	modified:   .github/workflows/deploy-gh-pages.yml 	modified:   .github/workflows/wrangler.yml

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,11 +1,11 @@
 ---
-name: 🚀 Deploy Code to GH Pages
+name: "🚀 GitHub Pages"
 
 on:
   workflow_dispatch:
   push:
     branches: [main]
-    paths: 'lib/**'
+    paths: "lib/**"
 
 jobs:
   deploy:
