Fix: wrangler CI 	new file:   .github/workflows/trunk_check.yml 	modified:   .github/workflows/wrangler.yml

--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -4,7 +4,9 @@ name: "🤠 Wrangler"
 on:
   push:
     branches: [main]
-    paths: "lib/**"
+    paths:
+      - "lib/**"
+      - "workers/**"
   pull_request:
     branches: [main]
   workflow_dispatch: {}
