--- a/workers/init/package.json
+++ b/workers/init/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "zzinit",
-  "version": "0.0.0",
+  "name": "@workers/init",
+  "version": "1.0.0",
   "private": true,
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format:check": "prettier --check '**/*.{js,css,json,md}'",
