--- a/workers/raw/package.json
+++ b/workers/raw/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "zi-src",
-  "version": "0.0.0",
+  "name": "@workers/raw",
+  "version": "1.0.0",
   "private": true,
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format:check": "prettier --check '**/*.{js,css,json,md}'",
