--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,6 +1,6 @@
 version: 0.1
 cli:
-  version: 0.13.0-beta
+  version: 0.14.1-beta
 repo:
   repo:
     host: github.com
@@ -21,14 +21,13 @@ lint:
         [markdownlint, -q, --config, .github/.markdownlint.yaml, "${target}"]
       direct_configs: [.github/.markdownlint.yaml]
   enabled:
-    - zsh-n@system
-    - actionlint@1.6.13
-    - gitleaks@8.8.7
+    - actionlint@1.6.15
+    - gitleaks@8.8.12
     - markdownlint@0.31.1
-    - prettier@2.6.2
+    - prettier@2.7.1
     - shellcheck@0.8.0
-    - shfmt@3.4.0
-    - taplo@release-cli-0.6.3
+    - shfmt@3.5.0
+    - taplo@release-taplo-cli-0.6.8
   ignore:
     - linters: [ALL]
       paths:
