--- a/workers/r2-store/package.json
+++ b/workers/r2-store/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "@cloudflare/workers-types": "3.14.1",
     "prettier": "2.7.1",
-    "wrangler": "2.0.17"
+    "wrangler": "2.0.17",
+    "typescript": "4.7.4"
   },
   "engines": {
     "node": ">=16"
