--- a/workers/raw/wrangler.toml
+++ b/workers/raw/wrangler.toml
@@ -1,3 +1,5 @@
 name = "raw"
 main = "src/index.ts"
 compatibility_date = "2022-04-27"
+workers_dev = false
+account_id = "2db2112b269ed3616ed3a863a222f3e8"
