--- a/workers/init/wrangler.toml
+++ b/workers/init/wrangler.toml
@@ -1,3 +1,5 @@
 name = "init"
 main = "src/index.ts"
 compatibility_date = "2022-05-30"
+workers_dev = false
+account_id = "2db2112b269ed3616ed3a863a222f3e8"
