--- a/workers/r2-store/wrangler.toml
+++ b/workers/r2-store/wrangler.toml
@@ -1,7 +1,8 @@
 name = "r2-store"
 main = "src/index.ts"
-workers_dev = true
 compatibility_date = "2022-07-11"
+workers_dev = false
+account_id = "2db2112b269ed3616ed3a863a222f3e8"
 
 [[r2_buckets]]
 binding = "R2_STORE"
