--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        worker: [get, init, raw, cache, r2-store]
+        worker: [get, init, raw, r2-store]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -41,14 +41,6 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           workingDirectory: "workers/raw"
-          command: "publish"
-      - if: startsWith(matrix.worker, 'cache')
-        name: "🤠 Deploy > cache"
-        uses: cloudflare/wrangler-action@2.0.0
-        with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
-          accountId: ${{ secrets.CF_ACCOUNT_ID }}
-          workingDirectory: "workers/cache"
           command: "publish"
       - if: startsWith(matrix.worker, 'r2-store')
         name: "🤠 Deploy > r2-store"
