--- a/workers/r2-store/wrangler.toml
+++ b/workers/r2-store/wrangler.toml
@@ -3,6 +3,7 @@ main = "src/index.ts"
 compatibility_date = "2022-07-11"
 workers_dev = false
 account_id = "2db2112b269ed3616ed3a863a222f3e8"
+route = { pattern = "https://r2.zshell.dev/*", zone_id = "88404a09f4a582bb65186110a35d1151" }
 
 [[r2_buckets]]
 binding = "R2_STORE"
