--- a/workers/r2-store/wrangler.toml
+++ b/workers/r2-store/wrangler.toml
@@ -3,8 +3,16 @@ main = "src/index.ts"
 compatibility_date = "2022-07-11"
 workers_dev = false
 account_id = "2db2112b269ed3616ed3a863a222f3e8"
-route = { pattern = "https://r2.zshell.dev/*", zone_id = "88404a09f4a582bb65186110a35d1151" }
 
 [[r2_buckets]]
-binding = "R2_STORE"
-bucket_name = "r2-store"
+binding = "R2_BUCKET"
+bucket_name = "r2-bucket"
+
+[env.r2-store]
+name = "r2-wiki"
+main = "src/r2_store.ts"
+workers_dev = true
+route = { pattern = "https://wiki.zshell.dev/r2*", zone_id = "88404a09f4a582bb65186110a35d1151" }
+r2_buckets = [
+  { binding = "R2_STORE", bucket_name = "r2-store", preview_bucket_name = "" },
+]
