modified:   package.json 	modified:   src/index.ts 	modified:   wrangler.toml 	../r2-wiki/package.json 	../r2-wiki/pnpm-lock.yaml 	../r2-wiki/src/index.ts 	../r2-wiki/tsconfig.json 	../r2-wiki/wrangler.toml

--- a/workers/r2-store/wrangler.toml
+++ b/workers/r2-store/wrangler.toml
@@ -6,13 +6,4 @@ account_id = "2db2112b269ed3616ed3a863a222f3e8"
 
 [[r2_buckets]]
 binding = "R2_BUCKET"
-bucket_name = "r2-bucket"
-
-[env.r2-store]
-name = "r2-wiki"
-main = "src/r2_store.ts"
-workers_dev = true
-route = { pattern = "https://wiki.zshell.dev/r2*", zone_id = "88404a09f4a582bb65186110a35d1151" }
-r2_buckets = [
-  { binding = "R2_STORE", bucket_name = "r2-store", preview_bucket_name = "" },
-]
+bucket_name = "r2-store"
