--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,16 +1,4 @@
 {
-  "extends": ["config:base"],
-  "lockFileMaintenance": {
-    "enabled": true
-  },
-  "packageRules": [
-    {
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true
-    },
-    {
-      "matchDepTypes": ["devDependencies"],
-      "automerge": true
-    }
-  ]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["local>z-shell/.github:renovate-config"]
 }
