modified:   .github/workflows/checksum.yml

--- a/.github/workflows/checksum.yml
+++ b/.github/workflows/checksum.yml
@@ -8,9 +8,10 @@ on:
   push:
     paths:
       - "lib/sh/**"
-      - "lib/zsh/**"      
+      - "lib/zsh/**"
+    branches: [main]
     tags:
-      - "v*.*.*"      
+      - "v*.*.*"
   workflow_dispatch: {}
 
 jobs:
