--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,21 +1,36 @@
 version: 0.1
 cli:
-  version: 0.16.1-beta
+  version: 0.17.0-beta
+  options:
+    - commands: [check, fmt]
+    - args: -y
+plugins:
+  sources:
+    - id: trunk
+      ref: v0.0.3
+      uri: https://github.com/trunk-io/plugins
 repo:
   repo:
     host: github.com
     owner: z-shell
     name: zi-src
+actions:
+  enabled:
+    - trunk-check-pre-push
+    - trunk-fmt-pre-commit
+    - trunk-cache-prune
+    - trunk-check-upgrade
+    - trunk-upgrade
 lint:
   enabled:
     - git-diff-check@SYSTEM
-    - actionlint@1.6.15
-    - gitleaks@8.10.2
-    - markdownlint@0.32.1
+    - actionlint@1.6.18
+    - gitleaks@8.12.0
+    - markdownlint@0.32.2
     - prettier@2.7.1
     - shellcheck@0.8.0
     - shfmt@3.5.0
-    - taplo@release-taplo-cli-0.6.8
+    - taplo@release-taplo-cli-0.7.0
   ignore:
     - linters: [ALL]
       paths:
