--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -9,6 +9,10 @@ on:
       - "lib/**"
       - "workers/**"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   deploy-worker:
     strategy:
@@ -16,6 +20,8 @@ jobs:
       matrix:
         worker: [get, init, raw, cdn, r2]
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    environment: wrangler
     steps:
       - uses: actions/checkout@v3
       - if: startsWith(matrix.worker, 'get')
