--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -3,7 +3,7 @@ name: "🤠 Wrangler"
 
 on:
   schedule:
-    - cron: '0 03 * * 1/3'
+    - cron: "0 03 * * 1/3"
   push:
     branches: [main]
     paths:
@@ -12,9 +12,9 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Choose an environment to deploy to: <dev|staging|prod>'
+        description: "Choose an environment to deploy to: <dev|staging|prod>"
         required: true
-        default: 'dev'
+        default: "dev"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -53,7 +53,7 @@ jobs:
           workingDirectory: "workers/raw"
           command: "publish"
       - if: startsWith(matrix.worker, 'cdn')
-        name: "🤠 Deploy > cache"
+        name: "🤠 Deploy > cdn"
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
