--- a/.github/workflows/rclone-action.yml
+++ b/.github/workflows/rclone-action.yml
@@ -3,7 +3,6 @@ name: "🔄 Rclone"
 on:
   push:
     paths:
-      # Paths which will tigger workflow
       - "lib/**"
   workflow_dispatch: {}
 
@@ -18,19 +17,27 @@ jobs:
     environment: 'cloud-storage'
     env:
       local_path: "lib"
+      gcp_remote_path: "gcp:gcp-space/src"
       r2_remote_path: "r2store:r2-store/src"
+      cdn_remote_path: "cdn:digital-space/src"
     steps:
       - name: "⤵️ Check out code from GitHub"
         uses: actions/checkout@v3
-      - name: "⏫ Run rclone"
+      - name: "⏫ Run rclone/gcp"
         uses: z-shell/.github/actions/rclone@v1.0.0
         with:
-          # The RCLONE_CONFIG secret must be set to set up for rclone (required)
+          config: ${{ secrets.GCP_STORE }}
+          args: "sync ${{ env.local_path }} ${{ env.gcp_remote_path }}"
+          debug: false
+      - name: "⏫ Run rclone/r2-store"
+        uses: z-shell/.github/actions/rclone@v1.0.0
+        with:
           config: ${{ secrets.R2_STORE }}
-          # Pass any argumets supported by rclone (required)
           args: "sync ${{ env.local_path }} ${{ env.r2_remote_path }}"
-          # Set custom location for rclone configuration file (optional)
-          # Will try to detect the default location using rclone.
-          #config-file: ""
-          # Verbose debugging and logging or carry on, but do quit on errors (optional)
+          debug: false
+      - name: "⏫ Run rclone/cdn"
+        uses: z-shell/.github/actions/rclone@v1.0.0
+        with:
+          config: ${{ secrets.CDN_STORE }}
+          args: "sync ${{ env.local_path }} ${{ env.cdn_remote_path }}"
           debug: false
