--- a/.github/workflows/checksum.yml
+++ b/.github/workflows/checksum.yml
@@ -1,11 +1,9 @@
+---
 name: "🆗 Checksum"
-
 on:
   push:
     paths:
-      - "lib/sh/**"
-      - "lib/zsh/**"
-    branches: [main]
+      - "lib/**"
   workflow_dispatch: {}
 
 jobs:
@@ -21,9 +19,9 @@ jobs:
             lib/zsh/init.zsh
       - run: mv checksum.txt lib/
       - name: "🆗 Commit"
-        uses: z-shell/.github/actions/commit@main
+        uses: z-shell/.github/actions/commit@v1.0.0
         with:
           commitMessage: Checksum ${{ github.sha }}
           workDir: lib
-          commitUserName: digital-teams[bot]
-          commitUserEmail: digital-teams@pm.me
+          commitUserName: ${{ secrets.ACTIONS_USER }}
+          commitUserEmail: ${{ secrets.ACTIONS_MAIL }}
