--- a/.github/workflows/rclone-action.yml
+++ b/.github/workflows/rclone-action.yml
@@ -14,7 +14,7 @@ jobs:
   sync:
     if: github.repository == 'z-shell/zi-src'
     runs-on: ubuntu-latest
-    environment: 'cloud-storage'
+    environment: "cloud-storage"
     env:
       local_path: "lib"
       gcp_remote_path: "gcp:gcp-space/src"
