modified:   workers/cdn/wrangler.toml 	modified:   workers/get/wrangler.toml 	modified:   workers/init/wrangler.toml 	modified:   workers/raw/wrangler.toml

--- a/workers/raw/wrangler.toml
+++ b/workers/raw/wrangler.toml
@@ -1,5 +1,6 @@
 name = "raw"
 main = "src/index.ts"
-compatibility_date = "2022-04-27"
-workers_dev = false
+compatibility_date = "2022-09-27"
+workers_dev = true
 account_id = "2db2112b269ed3616ed3a863a222f3e8"
+route = { pattern = "raw.zshell.dev", custom_domain = true }
