--- a/workers/get/wrangler.toml
+++ b/workers/get/wrangler.toml
@@ -1,5 +1,6 @@
 name = "get"
 main = "src/index.ts"
-compatibility_date = "2022-05-30"
-workers_dev = false
+compatibility_date = "2022-09-28"
+workers_dev = true
 account_id = "2db2112b269ed3616ed3a863a222f3e8"
+route = { pattern = "get.zshell.dev", custom_domain = true }
