modified:   pnpm-lock.yaml 	modified:   workers/get/src/index.ts 	modified:   workers/r2-store/package.json 	modified:   workers/r2-store/wrangler.toml

--- a/workers/r2-store/wrangler.toml
+++ b/workers/r2-store/wrangler.toml
@@ -8,3 +8,4 @@ compatibility_date = "2022-09-28"
 [[r2_buckets]]
 binding = "R2_STORE"
 bucket_name = "r2-store"
+preview_bucket_name = "r2-store-preview"
