--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -7,4 +7,4 @@ on:
 jobs:
   labels:
     name: "♻️ Sync labels"
-    uses: z-shell/.github/.github/workflows/sync-labels.yml@main
+    uses: z-shell/.github/.github/workflows/sync-labels.yml@v1.0.0
