--- a/.github/workflows/check-sh.yml
+++ b/.github/workflows/check-sh.yml
@@ -14,23 +14,23 @@ jobs:
   shellcheck:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-  #      - name: ☑️ ShellCheck
-  #        uses: ludeeus/action-shellcheck@master
-  #        with:
-  #          scandir: "./lib/sh"
-
+      - uses: actions/checkout@v3.0.2    
+      - name: ☑️ ShellCheck
+        uses: ludeeus/action-shellcheck@master
+        with:
+          scandir: "./lib/sh"
   run-install:
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
+    needs: [shellcheck]
     steps:
+      - uses: actions/checkout@v3.0.2    
       - name: ♻️ Prepare repository for Windows
         if: startsWith(matrix.os, 'windows')
         run: git config --global core.autocrlf input
-      - uses: actions/checkout@v3
       - uses: rlespinasse/github-slug-action@v4
       - name: 📦 Linux dependencies
         if: startsWith(matrix.os, 'ubuntu-latest')
@@ -51,25 +51,25 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu')
         run: |
           sh -x ./lib/sh/install.sh -- -i skip
-          command rm -vrf ~/.zi
+          command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a annex
-          command rm -vrf ~/.zi
+          command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a loader
-          command rm -vrf ~/.zi
+          command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a zunit
-          command rm -vrf ~/.zi
+          command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a zpmod
       - name: 🍎 Install on MacOS
         if: startsWith(matrix.os, 'macos')
         run: |
           sh -x ./lib/sh/install.sh -- -i skip
-          command rm -vrf ~/.zi
+          command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a annex
-          command rm -vrf ~/.zi
+          command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a loader
-          command rm -vrf ~/.zi
+          command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a zunit
-          command rm -vrf ~/.zi
+          command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a zpmod
       - name: 🪟 Install on Windows
         if: startsWith(matrix.os, 'windows')
@@ -77,7 +77,11 @@ jobs:
         run: |
           cd ${GITHUB_WORKSPACE}
           sh -x ./lib/sh/install.sh -- -i skip
+          command rm -rf /home/runneradmin/.zi
           sh -x ./lib/sh/install.sh -- -a annex
+          command rm -rf /home/runneradmin/.zi
           sh -x ./lib/sh/install.sh -- -a loader
+          command rm -rf /home/runneradmin/.zi
           sh -x ./lib/sh/install.sh -- -a zunit
+          command rm -rf /home/runneradmin/.zi
           sh -x ./lib/sh/install.sh -- -a zpmod
