--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -5,7 +5,8 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
-    paths: ["lib/**"]
+    tags: ['v*.*.*']
+    paths: ['lib/**']
 
 jobs:
   deploy:
@@ -16,12 +17,22 @@ jobs:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - name: ⤵️ Check out code from GitHub
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.0.2
+      - name: "🏷 Prepare tag"
+        id: prepare_tag
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          TAG_NAME="${GITHUB_REF##refs/tags/}"
+          echo "::set-output name=tag_name::${TAG_NAME}"
+          echo "::set-output name=deploy_tag_name::deploy-${TAG_NAME}"        
       - name: 🚀 Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: lib
-          user_name: digital-teams[bot]
-          user_email: digital-teams@pm.me
+          publish_dir: ./lib
+          user_name: ${{ secrets.ACTIONS_USER }}
+          user_email: ${{ secrets.ACTIONS_MAIL }}
+          commit_message: ${{ github.event.head_commit.message }}
+          tag_name: ${{ steps.prepare_tag.outputs.deploy_tag_name }}
+          tag_message: 'Deployment ${{ steps.prepare_tag.outputs.tag_name }}'          
