--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "z-src",
+  "name": "zi-src",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "trunk": "trunk",
     "crowdin": "crowdin",
-    "eslint": "pnpm --filter @zi-src/eslint",
+    "wrangler": "wrangler",
     "clean": "pnpm exec rm -rf node_modules pnpm-lock.yaml",
-    "start": "wrangler dev",
-    "push": "wrangler publish",
+    "publish": "wrangler publish",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "pnpm audit",
+    "cdn:dev": "pnpm --filter @workers/cdn -- dev",
+    "r2:dev": "pnpm --filter @workers/r2-store -- dev",
+    "hot-link:dev": "pnpm --filter @workers/hot-link_protection -- dev",
     "fmt": "trunk fmt",
     "check": "trunk check",
     "typecheck": "tsc"
   },
+  "dependencies": {
+    "@zi-src/eslint": "*",
+    "@workers/hot-link_protection": "*",
+    "@workers/r2-store": "*",
+    "@workers/cdn": "*"
+  },
   "devDependencies": {
     "@cloudflare/workers-types": "3.16.0",
     "@trunkio/launcher": "1.2.1",
-    "prettier": "2.7.1",
-    "typescript": "4.8.4",
-    "wrangler": "2.1.9"
+    "wrangler": "2.1.9",
+    "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=16",
