--- a/workers/hot-link_protection/wrangler.toml
+++ b/workers/hot-link_protection/wrangler.toml
@@ -1,6 +1,6 @@
-name = "init"
+name = "hot-link_protection"
 main = "src/index.ts"
 compatibility_date = "2022-09-28"
 workers_dev = true
 account_id = "2db2112b269ed3616ed3a863a222f3e8"
-route = { pattern = "init.zshell.dev", custom_domain = true }
+#route = { pattern = "get.zshell.dev", custom_domain = true }
