--- a/workers/raw/package.json
+++ b/workers/raw/package.json
@@ -4,20 +4,14 @@
   "private": true,
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format:check": "prettier --check '**/*.{js,css,json,md}'",
-    "format:write": "prettier --write '**/*.{js,css,json,md}'",
-    "format:diff": "prettier --list-different .",
-    "push": "wrangler publish",
+    "clean": "pnpm exec rm -rf node_modules pnpm-lock.yaml",
+    "publish": "wrangler publish",
     "dev": "wrangler dev"
   },
   "author": "Salvydas Lukosius <sall@w-ss.io>",
   "license": "MIT",
   "devDependencies": {
-    "@cloudflare/workers-types": "3.16.0",
-    "prettier": "2.7.1",
-    "wrangler": "2.1.9",
-    "typescript": "4.8.4"
+    "wrangler": "2.1.9"
   },
   "engines": {
     "node": ">=16"
