--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "clean": "pnpm exec rm -rf node_modules pnpm-lock.yaml",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "pnpm audit",
-    "cdn:publish": "pnpm --filter @workers/cdn -- publish",
-    "r2:publish": "pnpm --filter @zi-src/r2-store -- publish",
-    "cdn:dev": "pnpm --filter @workers/cdn -- dev",
+    "cdn:dev": "pnpm --filter @zi-src/cdn -- dev",
     "r2:dev": "pnpm --filter @zi-src/r2-store -- dev",
     "fmt": "trunk fmt",
     "check": "trunk check",
