--- a/.github/workflows/check-sh.yml
+++ b/.github/workflows/check-sh.yml
@@ -12,10 +12,6 @@ on:
       - ".github/workflows/check-sh.yml"
   workflow_dispatch: {}
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   shellcheck:
     runs-on: ubuntu-latest
@@ -33,6 +29,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     needs: [shellcheck]
+    concurrency:
+      group: ci-${{ github.ref }}
+      cancel-in-progress: false    
     steps:
       - name: 🪟 Set CRLF (Windows)
         if: startsWith(matrix.os, 'windows')
